--- a/dcv/dcvd.service
+++ b/dcv/dcvd.service
@@ -7,6 +7,8 @@ Group=kadap
 WorkingDirectory=/home/kadap
 ExecStart=/bin/bash /home/kadap/.dcv/dcv-monitor.sh
 Restart=always
+StartLimitIntervalSec=0 
+StartLimitBurst=5000
 
 [Install]
 WantedBy=multi-user.target
