--- a/dcv/dcvd.service
+++ b/dcv/dcvd.service
@@ -7,7 +7,7 @@ StartLimitBurst=10
 User=kadap
 Group=kadap
 WorkingDirectory=/home/kadap
-ExecStart=/bin/bash /home/kadap/.dcv/dcv-monitor.sh
+ExecStart=sudo /home/kadap/.dcv/dcv-monitor.sh && sudo /home/kadap/.dcv/dcv-monitor2.sh 
 Restart=always
 
 [Install]
