--- a/dcv/dcvd.service
+++ b/dcv/dcvd.service
@@ -4,7 +4,7 @@ StartLimitIntervalSec=5
 StartLimitBurst=10
 
 [Service]
-TYpe=ilde
+TYpe=idle
 User=kadap
 Group=kadap
 WorkingDirectory=/home/kadap
